<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ps.eachgold.activity.login.AutoCodeActivity">
    <include layout="@layout/login_head"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_bind_tel_code_content1"
        android:gravity="center"
        android:textSize="@dimen/text_size_60"
        android:textColor="@color/login_bind_tel_code_content1"
        android:layout_marginTop="@dimen/margin_150"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_bind_tel_code_content2"
        android:gravity="center"
        android:textSize="@dimen/text_size_30"
        android:textColor="@color/login_bind_tel_code_content2"
        android:layout_marginTop="@dimen/text_size_40"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_bind_tel_code_content3"
        android:gravity="center"
        android:textSize="@dimen/text_size_30"
        android:textColor="@color/login_bind_tel_code_content2"/>


</com.zhy.autolayout.AutoLinearLayout>
