<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/person_bg"
    android:orientation="vertical">
    <include layout="@layout/login_head"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:src="@drawable/file_banner"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/person_login_name"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="15dp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/person_login_name_hint"
                android:gravity="right|center_vertical"
                android:layout_marginRight="15dp"
                android:textColor="@color/gray_text"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/grey_next"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:visibility="invisible"/>
            
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/person_login_birthday"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="15dp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/person_login_birthday_hint"
                android:gravity="right|center_vertical"
                android:layout_marginRight="15dp"
                android:textColor="@color/gray_text"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/grey_next"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/person_login_sex"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="15dp" />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/person_login_sex_hint"
                android:gravity="right|center_vertical"
                android:layout_marginRight="15dp"
                android:textColor="@color/gray_text"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/grey_next"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/person_login_city"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="15dp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/person_login_city_hint"
                android:gravity="right|center_vertical"
                android:layout_marginRight="15dp"
                android:textColor="@color/gray_text"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/grey_next"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/person_login_education"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="15dp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/person_login_education_hint"
                android:gravity="right|center_vertical"
                android:layout_marginRight="15dp"
                android:textColor="@color/gray_text"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/grey_next"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/person_login_job"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="15dp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/person_login_job_hint"
                android:gravity="right|center_vertical"
                android:layout_marginRight="15dp"
                android:textColor="@color/gray_text"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/grey_next"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/person_login_income"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="15dp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/person_login_income_hint"
                android:gravity="right|center_vertical"
                android:layout_marginRight="15dp"
                android:textColor="@color/gray_text"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/grey_next"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:layout_marginRight="15dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Selesai"
                android:textColor="@color/white"
                android:background="@drawable/bt_save"/>
        </LinearLayout>


    </LinearLayout>



</LinearLayout>
