<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingTop="3dp">

        <RadioButton
            android:id="@+id/rb_loan"
            style="@style/main_radioButton_style"
            android:checked="true"
            android:text="@string/app_index"
            android:textColor="@drawable/rb_bottom_text_select"
            android:drawableTop="@drawable/rb_loan_select" />

        <RadioButton
            android:id="@+id/rb_credit"
            style="@style/main_radioButton_style"
            android:text="@string/app_loan_market"
            android:textColor="@drawable/rb_bottom_text_select"
            android:drawableTop="@drawable/rb_credit_card_select" />

        <RadioButton
            android:id="@+id/rb_instead"
            style="@style/main_radioButton_style"
            android:text="信用卡代还"
            android:textColor="@drawable/rb_bottom_text_select"
            android:drawableTop="@drawable/rb_instead_select"
            android:visibility="gone"/>

        <RadioButton
            android:id="@+id/rb_person"
            style="@style/main_radioButton_style"
            android:text="@string/app_person"
            android:textColor="@drawable/rb_bottom_text_select"
            android:drawableTop="@drawable/rb_person_select" />
    </RadioGroup>
    <FrameLayout
        android:id="@+id/mainFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/line"
        android:layout_weight="1">
    </FrameLayout>

    <View
        android:id="@+id/line"
        android:layout_above="@id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_gray"
        />
</RelativeLayout>

