<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/person_login_name"
            android:gravity="left|center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:hint="@string/person_login_name_hint"
            android:textSize="12sp"
            android:gravity="right|center_vertical"/>
    </LinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"></view>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/person_login_birthday"
            android:gravity="left|center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:hint="@string/person_login_name_hint"
            android:textSize="12sp"
            android:gravity="right|center_vertical"/>

    </LinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"></view>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/person_login_sex"
            android:gravity="left|center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:hint="@string/person_login_name_hint"
            android:textSize="12sp"
            android:gravity="right|center_vertical"/>/>

    </LinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"></view>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/person_login_city"
            android:gravity="left|center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:hint="@string/person_login_name_hint"
            android:textSize="12sp"
            android:gravity="right|center_vertical"/>

    </LinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"></view>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/person_info_show_education"
            android:gravity="left|center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:hint="@string/person_login_name_hint"
            android:textSize="12sp"
            android:gravity="right|center_vertical"/>

    </LinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"></view>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/person_info_show_job"
            android:gravity="left|center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:hint="@string/person_login_name_hint"
            android:textSize="12sp"
            android:gravity="right|center_vertical"/>

    </LinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"></view>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/person_login_income"
            android:gravity="left|center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:hint="RP500.00"
            android:textSize="12sp"
            android:gravity="right|center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="#F4F4F4"
        android:orientation="horizontal">

    </LinearLayout>
    <!--<Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@color/blue2"
        android:textColor="@color/gray"
        android:layout_marginLeft="5px"
        android:layout_marginRight="5px"
        android:layout_marginBottom="5px"
        android:text="@string/person_login_save"/>-->


</com.zhy.autolayout.AutoLinearLayout>
